fixed title spacing

--- a/src/variables.css
+++ b/src/variables.css
@@ -48,7 +48,7 @@
     --font-caption: var(--size-4) / 1.42 var(--font-ui);
 
     --font-display-spacing: -0.03em;
-    --font-title-spacing: -0.15em;
+    --font-title-spacing: -0.015em;
 
     /* Shadows */
     --shadow-1: 0 1px 3px #0003, 0 0 0 1px #0001;
